prometheus/traefik-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-prometheus
spec:
  rules:
  - host: prometheus.baishuchao.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
